--- a/package.json
+++ b/package.json
@@ -3,5 +3,19 @@
   "version": "0.0.1",
   "description": "Backend para la web",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
+    "body-parser": "^1.20.0",
+    "connect-multiparty": "^2.2.0",
+    "express": "^4.18.1",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.4",
+    "mongoose": "^6.5.1",
+    "mongoose-paginate": "^5.0.3",
+    "nodemon": "^2.0.19"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
+  }
 }
